--- a/mindspace-build/css/style.css
+++ b/mindspace-build/css/style.css
@@ -744,7 +744,7 @@ html {
   right: 0;
   bottom: 0;
   background-color: #38b6ff;
-  z-index: 10;
+  z-index: 99999;
   display: flex;
   flex-direction: column;
   align-items: center;
